# webcam-usage-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  webcam_log.sh
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  icons.rs  lib.rs  main.rs
src-tauri/src/camera/: mod.rs  monitor.rs  platform_macos.rs
src-tauri/src/export/: csv.rs  mod.rs
src-tauri/src/session/: manager.rs  mod.rs  models.rs
src-tauri/src/storage/: db.rs  mod.rs
src/components/: AppIcon.tsx  Dashboard.tsx  ExportButton.tsx  Pagination.tsx  PermissionGate.tsx  SessionList.tsx  SessionRow.tsx  StatsCards.tsx  TrackingControls.tsx  TrackingPausedAlert.tsx
src/hooks/: useSessions.ts  useTracking.ts
src/lib/: commands.ts
src/types/: session.ts
