[package]
name = "webcam-tracker"
version = "1.0.0"
description = "Webcam usage tracker for macOS"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "webcam_tracker_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

